main.css
html {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    background-color: #121212;
    color: rgba(255, 255, 255, 0.87);
    height: 100%;
    overflow: hidden;
}

h1 {
    color:rgba(255, 255, 255, 0.87);
    font-family: 'Roboto', sans-serif;
    font-size: 3rem;
}

h3 {
    color:rgba(255, 255, 255, 0.87);
    font-family: 'Roboto', sans-serif;
    font-size: 2rem;
}

p {
    color: rgba(255, 255, 255, 0.75);
    font-family: 'Lato', sans-serif;
    font-size: larger;
}

a {
    font-style: italic;
    color:rgba(255, 255, 255, 0.75);
}

a:link, a:visited, a:hover, a:active{
    color: rgba(255, 255, 255, 0.75);
}

#wrapper {
    display: flex;
    height: 100%;
    flex-wrap: nowrap;
}
/* Header */

#header {
    background-color: #616e7c;
    height: 100%;
    min-width: 15rem;
    flex-grow: 15;
    text-align: center;
}

#subpages {
    list-style-type: none;
    padding: 0;
}

#subpages a {
    text-decoration: none;
    font-style: normal;
    display: block;
    font-size: 1.6rem;
    text-align: center;
    margin-top: 0.25rem;
    font-family: 'Roboto', sans-serif;
}

#socials {
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: center;
}

#socials svg {
    margin: 1rem;
}

#me_pic {
    border-radius: 50%;
    height: 12rem;
    margin-top: 2rem;
    margin-bottom: 0;
}

/* Not header lol */

#main {
    flex-grow: 85;
    margin: 0;
    margin-left: 2rem;
    margin-right: 2rem;
    overflow-y: scroll;
}

#expandPlaylist p {
    margin: 0;
}

#beforeExpandp {
    margin-bottom: 0;
}

.subsection p{
    margin: 0;
}

.subsection h3 {
    margin-bottom: 0.5rem;
}

#projectsList {
    display: flex;
    flex-direction: column;
}

#projectsList li {
    text-align: center;
    list-style-type: none;
}

.projectMedia {
    display:block;
    max-width: 40em;
    width: auto;
    height: auto;
    margin: auto;
}

#projectsList h4 {
    color: rgba(255, 255, 255, 0.87);
    font-size: 1.5rem;
    font-family: 'Roboto', sans-serif;
    margin-bottom: 0;
}

/* https://css-tricks.com/adaptive-photo-layout-with-flexbox/ */
.dogPics ul {
    display: flex;
    flex-wrap: wrap;
}

.dogPics li {
    height: 40vh;
    flex-grow: 1;
    list-style-type: none;
}

.dogPics img {
    max-height: 100%;
    min-width: 100%;
    object-fit: cover;
    vertical-align: bottom;
}

@media (max-aspect-ratio: 1/1) {
    .dogpics li {
      height: 30vh;
    }
  }

